[gd_scene load_steps=7 format=3 uid="uid://dhpe4t0wvsfxj"]

[ext_resource type="Script" uid="uid://dcal470p1ftxf" path="res://scripts/organs.gd" id="1_df3lu"]
[ext_resource type="Texture2D" uid="uid://dvx6hxw4fijc4" path="res://sprites/organs/bone.png" id="2_y3n33"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y3klu"]
radius = 3.0

[sub_resource type="Animation" id="Animation_y3n33"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_df3lu"]
resource_name = "modulate"
length = 10.0
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5, 10),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y3klu"]
_data = {
&"RESET": SubResource("Animation_y3n33"),
&"modulate": SubResource("Animation_df3lu")
}

[node name="organs" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_df3lu")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_y3n33")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y3klu")

[node name="queue_free_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="animation_player" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_y3klu")
}

[node name="start_die_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="queue_free_timer" to="." method="_on_queue_free_timer_timeout"]
[connection signal="timeout" from="start_die_timer" to="." method="_on_start_die_timer_timeout"]
